[package]
name = "chorus"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.104"

[dev-dependencies]
chrono = { version = "0.4.26", features = ["serde"] }
rand = "0.8.5"
