[package]
name = "chorus"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chorus_derive = { path = "../chorus_derive" }
reqwest = { version = "0.11.18", features = ["blocking"] }
retry = "2.0.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.104"
tiny_http = "0.12.0"

[dev-dependencies]
chrono = { version = "0.4.26", features = ["serde"] }
rand = "0.8.5"
