[package]
name = "chorus_lib"
version.workspace = true
edition.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
readme.workspace = true
license.workspace = true
description = "Choreographic Programming in Rust"
keywords = ["choreography"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chorus_derive = { version = "0.5.0", path = "../chorus_derive" }
retry = "2.0.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.104"
tiny_http = "0.12.0"
ureq = "2.7.1"

[dev-dependencies]
chrono = { version = "0.4.26", features = ["serde"] }
criterion = { version = "0.5.1", features = ["html_reports"] }
clap = { version = "4.3.21", features = ["derive"] }
rand = "0.8.5"
termcolor = "1.2.0"

[[bench]]
name = "locally_benchmark"
harness = false

[[bench]]
name = "comm_benchmark"
harness = false
