[package]
name = "kvs"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "choreographic"
path = "src/bin/choreographic.rs"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chorus_lib = { version = "*", path = "../chorus_lib" }
rand = "0.8.5"
serde = { version = "1.0", features = ["derive"] }

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "kvs_benchmark"
harness = false
